--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "chakra-ui-simple-autocomplete": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-predictive-text": "^1.2.7",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
@@ -49,8 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "babel-jest": "^27.2.5",
-    "jest": "^27.2.5"
+    "@babel/preset-react": "^7.14.5"
+
   }
 }
